moving text over

--- a/preface.tex
+++ b/preface.tex
@@ -50,6 +50,10 @@ new statistical methods, but it is \emph{not} a book for people who want to
 push the boundaries of what statisticians think are interesting mathematical
 problems.
 
+This is not a cookbook that tells you what steps to do to get a $p$-value. This
+is more like Harold McGee's \textit{On Food and Cooking}, that tries to help
+give you the principles by which you can understand what the tests are doing.
+
 I also do not intend to fill this book with examples, because I find that it's
 very easy to think that your particular scientific question is very
 itneresting, and that the statistics that motivate are interesting, but that
@@ -61,3 +65,10 @@ woes. I try to keep it general so you can imagine you are the hero of the story.
 I basically want you to be able to articulate you own statistical tests, modify
 and critique existing methodologies, and develop a healthy skepticism of the
 idea of statistical inference in general.
+
+\section*{What else should I read}
+
+My principal sources of motivation for this book were Allen Downey's
+\textit{Think Stats} and \textit{Think Bayes}, Miran Lipva\v{c}a's
+\textit{Learn You a Haskell for Great Good}, and Stephen Stigler's
+\textit{History of Statistics}. That order is probably the most profitable.
