--- a/stats.tex
+++ b/stats.tex
@@ -1,6 +1,6 @@
 \documentclass{book}
 
-\title{Stats for people who know numbers}
+\title{Statistic for people who do numbers and science}
 \author{Scott W. Olesen}
 
 \begin{document}
@@ -12,8 +12,20 @@
 
 \mainmatter
 
-\chapter{first}
+\chapter{What is statistics?}
 
-qux fo
+"Statistics" is confusing because it means two things. It's a plural noun that
+refers to multiple things, each of which is called a "statistic". It's also a
+singular noun that refers to the study of these mathematical objects.
+
+Statistics is a tool.\footnote{I really enjoyed reading this anecdote from a
+paper by Gene Glass, the inventor of meta-analysis (doi:10.1002/jrsm.1133).
+Glass. He ends up sitting on the plane next to the famous statistician
+Tukey. Tukey asks, "Along which dimension do you see the greatest
+variability in effects?" By investigator. "Then jackknife on investigator."
+The point is that there's a wide gap between being able to understand what
+the jackknife is in a mathematical sense (i.e., how to compute it, whether
+it's an unbiased way to determine the variance in the median) and how to apply
+it. It also goes to show that "real" statisticians can be pretty hacky!}
 
 \end{document}
