moved md to tex

--- a/preface.tex
+++ b/preface.tex
@@ -15,8 +15,14 @@ This book is for people who are experienced quantitative and scientific
 thinkers, have decent algebra and maybesome rusty stats, and who want to learn
 about how to use statistical thinking to improve their scientific thinking.
 
-I also tried to have fun when I wrote this book, so there are lots of things in
-it that I think are fun, like history and footnotes.
+I also tried to have fun when I wrote this book, so there are lots of things
+in it that I think are fun, like history\footnote{I think history is actually
+a useful part of the study of statistics, because it gets you away from
+thinking about statistics as some monolithic thing and gets you toward
+thinking about it as a work-in-progress whose shape has been determined by the
+abilities and prejudices of its makers. Ronald Fisher's personal tastes will
+come up a lot; I have a pet theory that a lot of the flavor of contemporary
+statistics is due to his tastes.} and footnotes.
 
 \section*{What this book is for}
 
