--- a/chapter_estimators.tex
+++ b/chapter_estimators.tex
@@ -1,4 +1,10 @@
 %!TEX root=main
 
-\chapter{Estimators}
+\chapter{Parameters and estimators}
 
+Parameter is a function of the distribution and gives a number. Estimator is a
+function of data and gives a number and is intended to estimate the parameter.
+
+So if there are more and more $X_i$ with iid $F_X$, then the idea is that the estimator of the $\hat{\theta}(\vec{x})$ should approach $\theta(F_X)$.
+
+There's a ``sample'' probability distribution $\hat{f}_X$. It's hard to say whether this is a maximum likelihood estimator or something. What does ``sample'' mean? Like ``sample mean''?
