--- a/main.tex
+++ b/main.tex
@@ -1074,6 +1074,43 @@ resampling and pick \(d\) from the correct range.
 
 \subsubsection{Bootstrap}\label{bootstrap}
 
+\section{Example from Efron, ``Thinking the unthinkable''}
+
+There's some true distribution $f_X(x)$, and you're approximating it with
+$\hat{f}_X(x)$, which is a pmf. If you took $N$ data points, then bootstrapping
+means that you're picking a vector $\vec{c}$, where $c_i$ is the number of
+times that the $i$-th data point makes it into the bootstrap sample. This
+begs the question, how is $\vec{c}$ behaved? It's just a multinomial, with
+probability $1/N$ for each of the $N$ cells.
+
+Normally you compute a statistic $T(\vec{x})$ of the data. Instead, formulate
+this in terms of a function $g(\vec{c})$ If you can write $T(\vec{x}) = \sum_i t(x_i)$,
+then $g(\vec{c}) = \sum_i (c_i/N) t(x_i)$. In a Taylor expansion around
+$\vec{c}_\mathrm{ML} = (1, 1, \ldots, 1)$:
+$$
+g(\vec{c}) = g(\vec{c}_\mathrm{ML}) + \sum_i \frac{dg}{dc_i} (c_i - 1) + \mathcal{O}(c_i^2)
+$$
+So the variance of the values $g(\vec{c})$ that you will get from
+bootstrapping is approximately
+\begin{align}
+\expect{\left[g(\vec{c}) - g(\vec{c}_\mathrm{ML})\right]^2}
+  &= \expect{\left(\sum_i \frac{dg}{dc_i} (c_i-1)\right)^2} + \mathcal{O}(c_i^2) \\
+  &= \expect{\sum_i \left( \frac{dg}{dc_i} (c_i-1)\right)^2} + \mathcal{O}(c_i^2) \\
+  &= \sum_i \left(\frac{dg}{dc_i}\right)^2 \expect{(c_i-1)^2} + \mathcal{O}(c_i^2) \\
+\end{align}
+
+And then an $n^2$ comes out? The point is that the jackknife is basically
+doing a finite estimation of the gradient, by leaving out a single point at a
+time.
+
+\section{others}
+
+Bootstrapping means that you guess that the observed samples are the true
+distribution, and you work forward from there. It's like a maximum likelihood,
+frequentist thing.
+
+You need to draw $n$ samples, because that's the same number you drew originally.
+
 What do you do when you want to compute the variance of some statistic
 that's not easy to compute? Or you don't know what distribution you're
 sampling from? Then you permute your own data. How do we relate:
